# inumet-api

./: README.md  pyproject.toml
src/inumet/: __init__.py  api.py
src/inumet_api/: __init__.py  api.py
