[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inumet_api"
version = "0.0.2"
authors = [
  { name="Aron Kahrs", email="aronkahrs.us@gmail.com" },
]
description = "INUMET Api wrapper for python"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/aronkahrs-us/inumet-api"
Issues = "https://github.com/aronkahrs-us/inumet-api/issues"